# MagnetarYggdrasil

./: .gitignore  CANONICAL_MODEL_PROMPTS.md  MATRIX.md  README.md  check_projects.py
AdaSPARK/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  magnetar_ada.gpr
Bun/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  package.json
C/: .gitignore  Makefile  README_RUN.md
CKore/: .gitignore  Dockerfile  PLAN.md  README_RUN.md
CSharp/: MagnetarYggdrasil.sln  README_RUN.md
ClojureRing/: ARCHITECTURE.md  BITACORA.md  BRANCHING_MODEL.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  deps.edn
Cpp/: CMakeLists.txt  README_RUN.md  config.json
Cpp/projects/: Cpp.project.yml
Cpp/src/: main.cc
Cpp/src/controllers/: HealthController.cc  HealthController.h  TaskController.cc  TaskController.h  UserController.cc  UserController.h
Cpp/src/db/: Database.cc  Database.h  StmtGuard.h
Cpp/src/models/: Task.h  User.h
Cpp/src/repositories/: TaskRepository.cc  TaskRepository.h  UserRepository.cc  UserRepository.h
Cpp/src/services/: TaskService.cc  TaskService.h  UserService.cc  UserService.h
Cpp/test/: CMakeLists.txt  IntegrationTest.cc  ModelTest.cc  RepositoryTest.cc  ServiceTest.cc  main_test.cc
CrystalKemal/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  shard.yml
DVibe/: README_RUN.md  dub.json
Elixir/: README_RUN.md  mix.exs
Erlang/: BITACORA.md  Dockerfile  PLAN.md  README_RUN.md  RULES.md  STATUS.md  rebar.config  rebar3.crashdump
FSharpAot/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  Dockerfile  FSharpAot.fsproj  FSharpAot.slnx  Handlers.fs  PLAN.md  Program.fs  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  Repository.fs  STATUS.md  Service.fs  TESTING.md  WIP_GUIDELINES.md
Go/: README_RUN.md  go.mod  go.sum
Haskell/: README_RUN.md  magnetar-yggdrasil.cabal
Haskell/app/: Main.hs
Haskell/projects/: Haskell.project.yml
Haskell/src/: API.hs  Config.hs  Handlers.hs  Models.hs  Repository.hs  Service.hs
Haskell/test/: Spec.hs
JavaGraalVM/: .gitignore  README_RUN.md  pom.xml
JavaSpring/: README_RUN.md  magnetaryggdrasil.db  pom.xml
JuliaGenie/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  PLAN.md  Project.toml  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  bootstrap.jl  routes.jl
Kotlin/: .gitignore  README_RUN.md  build.gradle.kts  settings.gradle.kts
LuaOpenResty/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md
NimJester/: README_RUN.md  nim_jester.nimble
NodeNestJs/: .gitignore  README_RUN.md  package.json
OCamlDream/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  dune-project
OCamlDream/lib/: database.ml  dune  handlers.ml  models.ml  repository.ml  service.ml
OCamlDream/projects/: OCamlDream.project.yml
OCamlDream/test/: dune  test_main.ml
Odin/: README_RUN.md  main.odin
PHPSymphony/: .env  ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  composer.json
PythonFastApi/: README_RUN.md  requirements.txt
Racket/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  Dockerfile  (+16 more)
Rust/: .gitignore  Cargo.toml  PLAN.md
Rust/projects/: Rust.project.yml
Rust/src/: lib.rs  main.rs
Rust/src/api/: handlers.rs  routes.rs
Rust/src/db/: mod.rs
Rust/src/models/: task.rs  user.rs
Rust/src/repository/: task_repository.rs  user_repository.rs
Rust/src/service/: mod.rs  task_service.rs  user_service.rs
Rust/tests/: integration_tests.rs
WebAssembly/: ARCHITECTURE.md  BITACORA.md  BLOCKERS.md  BRANCHING_MODEL.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  README_RUN.md  REQUIREMENTS.md  RULES.md  STATUS.md  TESTING.md  WIP_GUIDELINES.md  spin.toml
WebAssembly/projects/: WebAssembly.project.yml
WebAssembly/src/: handlers.rs  lib.rs  models.rs  repository.rs  service.rs  tests.rs  traits.rs
(+484 files in other folders)
