[package]
name = "magnetar_webassembly"
version = "0.1.0"
edition = "2021"
authors = ["Jules <jules@magnetar.yggdrasil>"]

[dependencies]
spin-sdk = { version = "3.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
regex = "1.10"

[lib]
crate-type = ["cdylib"]
